Route put and delete done
